Tue May 22 01:14:31 UTC 2007  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * THANKS: Vikram Karandikar <softking at gmail dot com> is the 2200th
          contributor to ACE+TAO+CIAO!!

Mon May 21 22:56:26 UTC 2007  Ossama Othman  <ossama_othman at symantec dot com>

        * ace/OS_main.h:

          Fixed syntax error on VxWorks.  The return value for the
          ace_os_main_i() prototype was missing.

Mon May 21 10:32:02 UTC 2007  Ossama Othman  <ossama_othman at symantec dot com>

        * ace/OS_NS_math.h (ace_log2_helper):

          Fixed compile-time errors on Windows introduced by Olli's
          improvements described below.  VC8 doesn't support log2().
          Generate a quiet NaN value for now.

        * ace/OS_Memory.h (ACE_align_binary, ACE_ptr_align_binary):

          Handle OpenVMS's strange multiple size pointer model.  Addresses
          build warnings.

Mon May 21 13:37:55 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/Download.html:
          Mention also that the full packages do contain the generated files
          for GNU autoconf support. Thanks to Vikram Karandikar
          <softking at gmail dot com> for bringing this to our attention.

Mon May 21 13:04:04 UTC 2007  Olli Savia  <ops@iki.fi>

        * ace/ACE.h:
        * ace/OS_NS_math.h:
        * ace/OS_NS_math.inl:
          Added support for ACE_OS::log2(double) and improved support for
          ACE::log2(u_long).

        * NEWS:
          Document changes above.

        * tests/OS_Test.cpp:
          Added test for ACE_OS::log2(double).

Mon May 21 06:07:59 UTC 2007  Olli Savia  <ops@iki.fi>

        * ace/Sig_Handler.cpp:

        Reverted change:
             Fri May 18 10:51:26 UTC 2007  Olli Savia  <ops@iki.fi>

Mon May 21 05:57:58 UTC 2007  Olli Savia  <ops@iki.fi>

        * ace/OS_NS_stdio.h:
        * ace/OS_NS_stdio.inl:
          Implemented clearerr, fgetc, fputc, getc, putc and ungetc helper