@@ -1,3 +1,12 @@
+Tue May 22 06:11:34 UTC 2007  Olli Savia  <ops@iki.fi>
+
+        * ace/OS_NS_math.h:
+        * ace/OS_NS_math.inl:
+        * ace/config-win32-common.h:
+          Hide ACE_OS::log2 method if platform doesn't support it
+          natively. This is temporary fix just to keep things going
+          until we have made decicion what is the best solution here.
+        
 Tue May 22 01:14:31 UTC 2007  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>
 
         * THANKS: Vikram Karandikar <softking at gmail dot com> is the 2200th
